src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A10.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A10 {
  interface I;
  class C1 implements I;
  enum E1 implements I;
}
